src/objects/Fine__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Name of the Account</description>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account being fined.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fines</relationshipLabel>
        <relationshipName>Fines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Application Type</description>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Related_to_the_Fine__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Contact Related to the Fine</description>
        <label>Contact Related to the Fine</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Fines</relationshipLabel>
        <relationshipName>Fines</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Credential</description>
        <label>Credential</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Fines</relationshipLabel>
        <relationshipName>Fines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Due Date of the fine</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fine_Amount__c</fullName>
        <description>Fine Amount</description>
        <label>Fine Amount</label>
        <precision>11</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Permit_Plan_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Permit Plan Review related to the fine.</description>
        <label>Permit/Plan Review</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Fines</relationshipLabel>
        <relationshipName>Fines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Fine</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fine_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Balance__c</fullName>
        <description>Balance of fees left.</description>
        <formula>Total_Payments__c - Total_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fees__c</fullName>
        <description>Total Fees</description>
        <label>Total Fees</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payments__c</fullName>
        <description>Total Payments</description>
        <label>Total Payments</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Fine</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fine_Type</valueSetName>
        </valueSet>
    </fields>
    <label>Fine</label>
    <nameField>
        <displayFormat>FI-{0000}</displayFormat>
        <label>Fine Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>